--- a/MVCBlogApp/Views/PostPublishing/Edit.cshtml
+++ b/MVCBlogApp/Views/PostPublishing/Edit.cshtml
@@ -43,9 +43,9 @@
                             </div>
                             
                             <div class="col-12">
-                                <label asp-for="PostDto.FeaturedImageUrl" class="form-label fw-bold text-secondary">Featured Image Link</label>
-                                <input asp-for="PostDto.FeaturedImageUrl" type="text" class="form-control" placeholder="/image.jpg" />
-                                <span asp-validation-for="PostDto.FeaturedImageUrl" class="text-danger small"></span>
+                                <label asp-for="PostDto.FeaturedImageId" class="form-label fw-bold text-secondary">Featured Image ID </label>
+                                <input asp-for="PostDto.FeaturedImageId" type="text" class="form-control" placeholder="id" />
+                                <span asp-validation-for="PostDto.FeaturedImageId" class="text-danger small"></span>
                             </div>
 
                             <div class="col-12">
