--- a/MVCBlogApp/Views/Home/Index.cshtml
+++ b/MVCBlogApp/Views/Home/Index.cshtml
@@ -32,8 +32,8 @@
 
         <div class="download-section">
             <p class="download-text">Find me:</p>
-            <button class="download-btn github"><i class="bi bi-github"></i> Github</button>
-            <button class="download-btn linkedin"><i class="bi bi-linkedin"></i> Linkedin</button>
+            <a href="https://github.com/kpustelak" class="text-decoration-none"><button class="download-btn github" ><i class="bi bi-github"></i> Github</button></a>
+            <a href="https://www.linkedin.com/in/kornel-pustelak-274205284/" class="text-decoration-none"><button class="download-btn linkedin"><i class="bi bi-linkedin"></i>Linkedin</button></a>
         </div>
     </div>
     
@@ -65,6 +65,10 @@
                         <span>•</span>
                         <span>@featuredDateTime.Year/@featuredDateTime.Month/@featuredDateTime.Day</span>
                     </div>
+                    <div>
+                        <a asp-action="Index" asp-controller="Post" asp-route-id="@featuredPost.Id" class="read-more pt-4">See more →</a>
+                    </div>
+                    
                 </div>
             </div>
 
@@ -96,7 +100,19 @@
                         <div class="post-content">
                             <div class="post-title">@postCard.Title</div>
                             <div class="post-excerpt">@postCard.Excerpt</div>
-                            <a href="#" class="read-more">See more →</a>
+                            <div class="feature-meta">
+                                <img src="https://images.unsplash.com/photo-1535713875002-d1d0cf377fde?w=100&h=100&fit=crop" alt="Author" class="author-img">
+                                <span>Kornel Pustelak</span>
+                                <span>•</span>
+                                @{
+                                    var date = postCard.CreatedAt.Split(" ");
+                                    date[0] = date[0].Replace("-", "/");
+                                }
+                                <span>@date[0]</span>
+                            </div>
+                            <div>
+                                <a asp-action="Index" asp-controller="Post" asp-route-id="@postCard.Id" class="read-more pt-4">See more →</a>
+                            </div>
                         </div>
                     </div>
                 }
