--- a/MVCBlogApp/Views/Home/Index.cshtml
+++ b/MVCBlogApp/Views/Home/Index.cshtml
@@ -23,10 +23,12 @@
             </div>
             @foreach (var category in Model.PostCategories)
             {
-                <div class="nav-item">
-                    <span class="nav-icon"><i class="bi @category.IconBootstrapLink"></i></span>
-                    <span>@category.Name</span>
-                </div>    
+                <a asp-action="Category" asp-controller="Post" asp-route-id="1">
+                    <div class="nav-item">
+                        <span class="nav-icon"><i class="bi @category.IconBootstrapLink"></i></span>
+                        <span>@category.Name</span>
+                    </div>   
+                </a> 
             }
         </div>
 
