--- a/MVCBlogApp/Views/Post/Category.cshtml
+++ b/MVCBlogApp/Views/Post/Category.cshtml
@@ -1,3 +1,5 @@
+@using Microsoft.Extensions.Options
+@inject IOptions<BlogSettings> BlogSettings
 @model MVCBlogApp.Models.ViewModel.Post.CategoryViewModel
 
 <link rel="stylesheet" href="~/css/blog-main.css"/>
@@ -11,8 +13,8 @@
 <div class="blog-container">
     <div class="sidebar">
         <div class="profile-section">
-            <img src="https://images.unsplash.com/photo-1535713875002-d1d0cf377fde?w=200&h=200&fit=crop" alt="Profile" class="profile-img">
-            <div class="profile-name">Kornel Pustelak</div>
+            <img src="/@BlogSettings.Value.AuthorImage" alt="Profile" class="profile-img">
+            <div class="profile-name">@BlogSettings.Value.AuthorNameAndSurname</div>
             <div class="profile-role">Author</div>
         </div>
         <div class="nav-menu">
@@ -35,8 +37,8 @@
 
         <div class="download-section">
             <p class="download-text">Find me:</p>
-            <a href="https://github.com/kpustelak" class="text-decoration-none"><button class="download-btn github" ><i class="bi bi-github"></i> Github</button></a>
-            <a href="https://www.linkedin.com/in/kornel-pustelak-274205284/" class="text-decoration-none"><button class="download-btn linkedin"><i class="bi bi-linkedin"></i>Linkedin</button></a>
+            <a href="@BlogSettings.Value.AuthorGithub" class="text-decoration-none"><button class="download-btn github" ><i class="bi bi-github"></i> Github</button></a>
+            <a href="@BlogSettings.Value.AuthorLinkedin" class="text-decoration-none"><button class="download-btn linkedin"><i class="bi bi-linkedin"></i>Linkedin</button></a>
         </div>
     </div>
     
@@ -87,8 +89,8 @@
                             <h2 class="post-list-title">@post.Title</h2>
                             <p class="post-list-excerpt">@post.Excerpt</p>
                             <div class="post-list-meta">
-                                <img src="https://images.unsplash.com/photo-1535713875002-d1d0cf377fde?w=100&h=100&fit=crop" alt="Author" class="author-img-small">
-                                <span class="author-name-small">Kornel Pustelak</span>
+                                <img src="/@BlogSettings.Value.AuthorImage" alt="Author" class="author-img-small">
+                                <span class="author-name-small">@BlogSettings.Value.AuthorNameAndSurname</span>
                                 <span class="dot">•</span>
                                 <span>@postDateTime.ToString("MMM dd, yyyy")</span>
                             </div>
