--- a/MVCBlogApp/Views/Post/Index.cshtml
+++ b/MVCBlogApp/Views/Post/Index.cshtml
@@ -1,3 +1,5 @@
+@using Microsoft.Extensions.Options
+@inject IOptions<BlogSettings> BlogSettings
 @model MVCBlogApp.Models.ViewModel.Post.PostDetailsViewModel;
 
 <link rel="stylesheet" href="~/css/blog-main.css"/>
@@ -13,8 +15,8 @@
 <div class="blog-container">
     <div class="sidebar">
         <div class="profile-section">
-            <img src="https://images.unsplash.com/photo-1535713875002-d1d0cf377fde?w=200&h=200&fit=crop" alt="Profile" class="profile-img">
-            <div class="profile-name">Kornel Pustelak</div>
+            <img src="/@BlogSettings.Value.AuthorImage" alt="Profile" class="profile-img">
+            <div class="profile-name">@BlogSettings.Value.AuthorNameAndSurname</div>
             <div class="profile-role">Author</div>
         </div>
         <div class="nav-menu text-decoration-none">
@@ -37,8 +39,8 @@
 
         <div class="download-section">
             <p class="download-text">Find me:</p>
-            <a href="https://github.com/kpustelak" class="text-decoration-none"><button class="download-btn github" ><i class="bi bi-github"></i> Github</button></a>
-            <a href="https://www.linkedin.com/in/kornel-pustelak-274205284/" class="text-decoration-none"><button class="download-btn linkedin"><i class="bi bi-linkedin"></i>Linkedin</button></a>
+            <a href="@BlogSettings.Value.AuthorGithub" class="text-decoration-none"><button class="download-btn github" ><i class="bi bi-github"></i> Github</button></a>
+            <a href="@BlogSettings.Value.AuthorLinkedin" class="text-decoration-none"><button class="download-btn linkedin"><i class="bi bi-linkedin"></i>Linkedin</button></a>
         </div>
     </div>
     
@@ -66,9 +68,9 @@
                 <h1 class="post-main-title">@Model.PostModel.Title</h1>
                 
                 <div class="post-meta-header">
-                    <img src="https://images.unsplash.com/photo-1535713875002-d1d0cf377fde?w=100&h=100&fit=crop" alt="Author" class="author-img-large">
+                    <img src="/@BlogSettings.Value.AuthorImage" alt="Author" class="author-img-large">
                     <div class="author-info">
-                        <div class="author-name">Kornel Pustelak</div>
+                        <div class="author-name">@BlogSettings.Value.AuthorNameAndSurname</div>
                         <div class="post-date">
                             <span>@postDateTime.ToString("MMMM dd, yyyy")</span>
                             <span class="dot">•</span>
